tests/negative/test_load_non_eval_eval.orb
fnc main () () {
    sym (x 0);
    eval x;
};